# pose2msg

./: CMakeLists.txt  package.xml
launch/: example.launch
matlab/: aa_settings.m  simple_3d_bounds_1.m  simple_3d_bounds_2.m  simple_3d_error.m  simple_3d_interp.m  simple_3d_plot.m  simple_difference.m  simple_distance.m  simple_rmse.m
src/: GPSConversion.h  record.cpp
